UI sidebar action added, sidebar.js updated, modals are shown by clicking sidebar links, gets data. In AsyncForm.js method onsubmit() doesn't work somehow

--- a/public/index.html
+++ b/public/index.html
@@ -108,7 +108,7 @@
             </section>
         </div>
     </div>
-
+    setInterval(hhRuResumeUpdater, 60000);
     <div class="modal fade in" id="modal-login" data-modal-id="login">
         <div class="modal-dialog">
             <div class="modal-content">
